--- a/estilos.css
+++ b/estilos.css
@@ -48,7 +48,7 @@ div#cmnu{
 	-moz-border-radius: 91px 91px 91px 91px;
 	-webkit-border-radius: 91px 91px 91px 91px;
 	border: 0px solid #000000;
-	margin-left: 200px;
+	margin-left: 10px;
 }
 
 
@@ -66,6 +66,17 @@ a#cmnu:hover{
 	color: #e6e6e6;
 }
 
+div#icm{
+	margin-left: 130px;
+	margin-top: 60px;
+}
+
+
+img#icm{
+	height: 50px;
+	width: 50px;
+}
+
 /* div galeria */
 div#cgal{
 	align-items: center;
@@ -77,7 +88,7 @@ div#cgal{
 	-moz-border-radius: 91px 91px 91px 91px;
 	-webkit-border-radius: 91px 91px 91px 91px;
 	border: 0px solid #000000;
-	margin-left: 150px;
+	margin-left: 10px;
 }
 
 
@@ -95,7 +106,16 @@ a#cgal:hover{
 	color: #e6e6e6;
 }
 
+div#gal{
+	margin-left: 130px;
+	margin-top: 60px;
+}
 
+
+img#gal{
+	height: 50px;
+	width: 50px;
+}
 /* div promociones */
 div#cprom{
 	align-items: center;
@@ -107,7 +127,7 @@ div#cprom{
 	-moz-border-radius: 91px 91px 91px 91px;
 	-webkit-border-radius: 91px 91px 91px 91px;
 	border: 0px solid #000000;
-	margin-left: 150px
+	margin-left: 5px
 }
 
 
@@ -125,17 +145,30 @@ a#cprom:hover{
 	color: #e6e6e6;
 }
 
+div#prom{
+	margin-left: 130px;
+	margin-top: 60px;
+}
+
+
+img#prom{
+	height: 50px;
+	width: 50px;
+}
+
+/* div promociones */
+
 div#sbr{
 	align-items: center;
 	background-color: red;
 	height: 100px;
 	width: 100px;
-	margin: 40px 1px 0px 0px;
+	margin: 40px 0px 0px 0px;
 	border-radius: 96px 96px 200px 200px;
 	-moz-border-radius: 96px 96px 200px 200px;
 	-webkit-border-radius: 96px 96px 200px 200px;
 	border: 0px solid #000000;
-	margin-left: 180px;
+	margin-left: 120px;
 	background: rgba(12,250,0,1);
 	background: -moz-linear-gradient(left, rgba(12,250,0,1) 0%, rgba(87,239,140,1) 15%, rgba(250,250,250,1) 41%, rgba(255,255,255,1) 60%, rgba(240,46,20,1) 84%, rgba(231,51,35,1) 100%);
 	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(12,250,0,1)), color-stop(15%, rgba(87,239,140,1)), color-stop(41%, rgba(250,250,250,1)), color-stop(60%, rgba(255,255,255,1)), color-stop(84%, rgba(240,46,20,1)), color-stop(100%, rgba(231,51,35,1)));
@@ -149,6 +182,8 @@ div#sbr{
 
 div#sbr:hover{
 	background-color: #0d9900;
+	height: 110px;
+	width: 110px;
 }
 
 p#sbr{
@@ -157,6 +192,11 @@ p#sbr{
 	color: #705c45;
 }
 
+p#sbr:hover{
+	font-family: fantasy;
+	font-size: 20px;
+	color: #705c45;
+}
 /* termina encabezado */
 
 
@@ -314,13 +354,13 @@ div#pdp{
 /*BLOQUE DATOS*/
 
 div#datos{
-	margin-left: 300px;
+	margin-left: 60px;
 	margin-top: 10px;
 }
 
 p#uni{
 	font-family: sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	margin-top: 10px;
 	font-weight: bold;
 	color: grey;
@@ -328,17 +368,55 @@ p#uni{
 }
 p#mat{
 	font-family: sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold;
 	color: grey;
 }
 p#nom{
 	font-family: sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold;
 	color: grey;
 }
 /*TERMINA BLOQUE DATOS*/
+
+
+/*BLOQUE DATOS*/
+
+div#datos{
+	margin-left: 60px;
+	margin-top: 10px;
+}
+
+p#uni{
+	font-family: sans-serif;
+	font-size: 18px;
+	margin-top: 10px;
+	font-weight: bold;
+	color: grey;
+
+}
+p#mat{
+	font-family: sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	color: grey;
+}
+p#nom{
+	font-family: sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	color: grey;
+}
+/*TERMINA BLOQUE DATOS*/
+
+div#direccion{
+	height: 100px;
+	width: 270px;
+	margin-left: 130px;
+	margin-top: 10px;
+
+}
 
 
 /*Div Contacto*/
@@ -417,3 +495,5 @@ img#mail{
 
 }
 /*Termina contacto*/
+
+/*TERMINA PIE DE PAGINA*/
