--- a/estilos.css
+++ b/estilos.css
@@ -50,7 +50,7 @@ div#cmnu{
 	align-items: center;
 	background-color: red;
 	height: 30px;
-	width: 80px;
+	width: 85px;
 	margin: 70px 0px 0px 0px;
 	border-radius: 91px 91px 91px 91px;
 	-moz-border-radius: 91px 91px 91px 91px;
@@ -65,9 +65,10 @@ div#cmnu:hover{
 }
 
 a#cmnu{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	color: black;
+	font-weight: bolder;
 }
 
 a#cmnu:hover{
@@ -75,7 +76,7 @@ a#cmnu:hover{
 }
 
 div#icm{
-	margin-left: 130px;
+	margin-left: 120px;
 	margin-top: 60px;
 }
 
@@ -90,7 +91,7 @@ div#cgal{
 	align-items: center;
 	background-color: red;
 	height: 30px;
-	width: 100px;
+	width: 120px;
 	margin: 70px 0px 0px 100px;
 	border-radius: 91px 91px 91px 91px;
 	-moz-border-radius: 91px 91px 91px 91px;
@@ -105,9 +106,10 @@ div#cgal:hover{
 }
 
 a#cgal{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	color: black;
+	font-weight: bolder;
 }
 
 a#cgal:hover{
@@ -129,7 +131,7 @@ div#cprom{
 	align-items: center;
 	background-color: red;
 	height: 30px;
-	width: 155px;
+	width: 195px;
 	margin: 70px 0px 0px 100px;
 	border-radius: 91px 91px 91px 91px;
 	-moz-border-radius: 91px 91px 91px 91px;
@@ -144,9 +146,10 @@ div#cprom:hover{
 }
 
 a#cprom{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	color: black;
+	font-weight: bolder;
 }
 
 a#cprom:hover{
@@ -154,7 +157,7 @@ a#cprom:hover{
 }
 
 div#prom{
-	margin-left: 130px;
+	margin-left: 120px;
 	margin-top: 60px;
 }
 
@@ -176,7 +179,7 @@ div#sbr{
 	-moz-border-radius: 96px 96px 200px 200px;
 	-webkit-border-radius: 96px 96px 200px 200px;
 	border: 0px solid #000000;
-	margin-left: 120px;
+	margin-left: 90px;
 	background: rgba(12,250,0,1);
 	background: -moz-linear-gradient(left, rgba(12,250,0,1) 0%, rgba(87,239,140,1) 15%, rgba(250,250,250,1) 41%, rgba(255,255,255,1) 60%, rgba(240,46,20,1) 84%, rgba(231,51,35,1) 100%);
 	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(12,250,0,1)), color-stop(15%, rgba(87,239,140,1)), color-stop(41%, rgba(250,250,250,1)), color-stop(60%, rgba(255,255,255,1)), color-stop(84%, rgba(240,46,20,1)), color-stop(100%, rgba(231,51,35,1)));
@@ -195,15 +198,17 @@ div#sbr:hover{
 }
 
 p#sbr{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 17px;
 	color: #705c45;
+	font-weight: bolder;
 }
 
 p#sbr:hover{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 20px;
 	color: #705c45;
+	font-weight: bolder;
 }
 /* termina encabezado */
 
@@ -231,12 +236,13 @@ div#plat{
 
 p#plat{
 	margin-top: 20px;
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 35px;
 	letter-spacing: 1px;
 	word-spacing: 7px;
 	color: black;
 	align-self: center;
+	font-weight: bolder;
 }
 
 /* termina div slogan*/
@@ -275,7 +281,7 @@ div#hor{
 }
 
 p#hor{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	letter-spacing: 1px;
 	word-spacing: 7px;
@@ -284,6 +290,7 @@ p#hor{
 	align-self: center;
 	margin-bottom: -4px;
 	margin-top: 15px;
+	font-weight: bolder;
 }
 
 /*termina Div horarios*/
@@ -325,7 +332,7 @@ div#adn1{
 }
 
 p#adn2{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 28px;
 	letter-spacing: 1px;
 	white-space: -5px;
@@ -334,7 +341,7 @@ p#adn2{
 	margin-bottom: -4px;
 	margin-top: 30px;
 	margin-left: 200px;
-	font-style: oblique;
+	font-weight: bolder;
 }
 /*Termina acdn*/
 
