--- a/estilos2.css
+++ b/estilos2.css
@@ -4,7 +4,6 @@ div#contenedor{
 	height: 1687px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: red;
 	background-color: black;
 	display: block;
 	flex-wrap: wrap;
@@ -18,13 +17,14 @@ div#menu{
 	display: flex;
 	flex-wrap: wrap;
 	background: rgba(255,255,255,1);
-background: -moz-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
-background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,1)), color-stop(33%, rgba(0,0,0,1)), color-stop(67%, rgba(5,3,0,1)), color-stop(97%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
-background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
-background: -o-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
-background: -ms-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
-background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+	background: -moz-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,1)), color-stop(33%, rgba(0,0,0,1)), color-stop(67%, rgba(5,3,0,1)), color-stop(97%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
+	background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
+	background: -o-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
+	background: -ms-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 33%, rgba(5,3,0,1) 67%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+
 }
 
 div#logo{
@@ -49,7 +49,7 @@ div#cmnu{
 	align-items: center;
 	background-color: red;
 	height: 30px;
-	width: 80px;
+	width: 85px;
 	margin: 70px 0px 0px 0px;
 	border-radius: 91px 91px 91px 91px;
 	-moz-border-radius: 91px 91px 91px 91px;
@@ -64,9 +64,10 @@ div#cmnu:hover{
 }
 
 a#cmnu{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	color: black;
+	font-weight: bolder;
 }
 
 a#cmnu:hover{
@@ -74,7 +75,7 @@ a#cmnu:hover{
 }
 
 div#icm{
-	margin-left: 130px;
+	margin-left: 120px;
 	margin-top: 60px;
 }
 
@@ -89,7 +90,7 @@ div#cgal{
 	align-items: center;
 	background-color: red;
 	height: 30px;
-	width: 100px;
+	width: 120px;
 	margin: 70px 0px 0px 100px;
 	border-radius: 91px 91px 91px 91px;
 	-moz-border-radius: 91px 91px 91px 91px;
@@ -104,9 +105,10 @@ div#cgal:hover{
 }
 
 a#cgal{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	color: black;
+	font-weight: bolder;
 }
 
 a#cgal:hover{
@@ -128,7 +130,7 @@ div#cprom{
 	align-items: center;
 	background-color: red;
 	height: 30px;
-	width: 155px;
+	width: 195px;
 	margin: 70px 0px 0px 100px;
 	border-radius: 91px 91px 91px 91px;
 	-moz-border-radius: 91px 91px 91px 91px;
@@ -143,9 +145,10 @@ div#cprom:hover{
 }
 
 a#cprom{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 24px;
 	color: black;
+	font-weight: bolder;
 }
 
 a#cprom:hover{
@@ -153,7 +156,7 @@ a#cprom:hover{
 }
 
 div#prom{
-	margin-left: 130px;
+	margin-left: 120px;
 	margin-top: 60px;
 }
 
@@ -175,7 +178,7 @@ div#sbr{
 	-moz-border-radius: 96px 96px 200px 200px;
 	-webkit-border-radius: 96px 96px 200px 200px;
 	border: 0px solid #000000;
-	margin-left: 120px;
+	margin-left: 90px;
 	background: rgba(12,250,0,1);
 	background: -moz-linear-gradient(left, rgba(12,250,0,1) 0%, rgba(87,239,140,1) 15%, rgba(250,250,250,1) 41%, rgba(255,255,255,1) 60%, rgba(240,46,20,1) 84%, rgba(231,51,35,1) 100%);
 	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(12,250,0,1)), color-stop(15%, rgba(87,239,140,1)), color-stop(41%, rgba(250,250,250,1)), color-stop(60%, rgba(255,255,255,1)), color-stop(84%, rgba(240,46,20,1)), color-stop(100%, rgba(231,51,35,1)));
@@ -194,20 +197,22 @@ div#sbr:hover{
 }
 
 p#sbr{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 17px;
 	color: #705c45;
+	font-weight: bolder;
 }
 
 p#sbr:hover{
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 20px;
 	color: #705c45;
+	font-weight: bolder;
 }
 /* termina encabezado */
 
 
-/* div slogan*/
+/* div tit mn*/
 div#platillos{
 	height: 80px;
 	width: 1300px;
@@ -230,21 +235,22 @@ div#plat{
 
 p#plat{
 	margin-top: 15px;
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 45px;
-	letter-spacing: 1px;
-	word-spacing: 7px;
-	color: orange;
+	word-spacing: 2px;
+	color: #ff6f00;
 	align-self: center;
+	font-weight: bolder;
 }
 
 
 p#plat:hover{
 	margin-top: 10px;
-	font-family: fantasy;
+	font-family: helvetica;
 	font-size: 54px;
 	color: #ff6f00;
 	align-self: center;
+	font-weight: bolder;
 
 }
 
@@ -269,8 +275,9 @@ div#pp{
 p#pp1{
 	font-size: 30px;
 	margin-top: 10px;
-	font-family: fantasy;
+	font-family: helvetica;
 	color: white;
+	font-weight: bolder;
 }
 
 hr#pp{
@@ -611,8 +618,9 @@ div#psts{
 p#psts{
 	font-size:34px;
 	margin: auto;
-	font-family: fantasy;
+	font-family: helvetica;
 	color: white;	
+	font-weight: bolder;
 }
 
 
@@ -639,8 +647,9 @@ div#bebs{
 p#bebs{
 	font-size: 34px;
 	margin: auto;
-	font-family: fantasy;
+	font-family: helvetica;
 	color: white;	
+	font-weight: bolder;
 }
 /*FIN BEBIDAS*/
 
